--- a/kpt/about_us.html
+++ b/kpt/about_us.html
@@ -10,6 +10,9 @@
 <script src="js/carousel.js"></script>
 <script type="text/javascript">
 		$(document).ready(function(){	
+			
+			// here is a change; it should stay through the merge!
+			
 			$("#banner").easySlider({
 				auto: true, 
 				continuous: true
@@ -19,6 +22,7 @@
 
 </head>
 <body>
+	<!-- this change is in the html; it should also be here after the merge! -->
 	<div id="header_container">
 		<div id="header">
 			<div class="logo">
@@ -185,7 +189,7 @@
 	<div class="clear"></div>
 	<div id="footer">
 		<div class="text">
-			<p>© 2012 KP Trading Group. Any trademarks are the property of their respective owners. 
+			<p>ï¿½ 2012 KP Trading Group. Any trademarks are the property of their respective owners. 
 Warehouse: 105 Riviera Drive, Unit 4, Markham, Ontario, L3R 5J7, Canada. Tel: 905-479-6054</p>
 		</div>
 		<div class="footer_menu">
